--- a/.github/workflows/build-image-and-ci-pr.yml
+++ b/.github/workflows/build-image-and-ci-pr.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
     - name: checkout code
       uses: actions/checkout@v2
+    - name: improve buildah performance
+      run: apt install --yes fuse-overlayfs
     - name: build tox image
       run: tests/make_tox_container.sh
     - name: login to quay.io
@@ -36,6 +38,8 @@ jobs:
     steps:
     - name: checkout code
       uses: actions/checkout@v2
+    - name: improve buildah performance
+      run: apt install --yes fuse-overlayfs
     - name: build pdns image
       run: tests/make_pdns_container.sh ${{ matrix.pdns }}
     - name: login to quay.io
