New Python versions for testing:
* 3.8.10

* 3.9.5

* 3.10.0b1

--- a/.github/workflows/build-image-and-ci-pr.yml
+++ b/.github/workflows/build-image-and-ci-pr.yml
@@ -64,7 +64,7 @@ jobs:
     strategy:
       matrix:
         pdns: [4.3, 4.4, master]
-        python: [py36, py37, py38, py39]
+        python: [py36, py37, py38, py39, py310]
       fail-fast: false
     container:
       image: docker://quay.io/apaa-test-images/pdns-${{ matrix.pdns }}:pr${{ github.event.pull_request.number }}
