Pin jsonschema to <4 to avoid a compatibility issue

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ deps=
     bravado
     ansible
     swagger-spec-validator==2.6.0
+    jsonschema<4
 commands=
     ansible-playbook -M . -i localhost, tests/test-patk-pdns-{env:pdns_version}.yml
     ansible-playbook -M . -i localhost, tests/test-paz-pdns-{env:pdns_version}.yml
