--- a/tox.ini
+++ b/tox.ini
@@ -7,9 +7,13 @@ deps=
     ansible
     swagger-spec-validator==2.6.0
     jsonschema<4
+setenv=
+    ANSIBLE_COLLECTIONS_PATH={envtmpdir}/collections
 commands=
-    ansible-playbook -M . -i localhost, tests/test-patk-pdns-{env:pdns_version}.yml
-    ansible-playbook -M . -i localhost, tests/test-paz-pdns-{env:pdns_version}.yml
+    ansible-playbook -i localhost, workflow-support/make-galaxy-yml.yml
+    ansible-galaxy collection install -p {env:ANSIBLE_COLLECTIONS_PATH} src
+    ansible-playbook -i localhost, workflow-support/test-tsigkey-pdns-{env:pdns_version}.yml
+    ansible-playbook -i localhost, workflow-support/test-zone-pdns-{env:pdns_version}.yml
 [testenv:lint-action]
 ignore_errors=true
 whitelist_externals=bash
@@ -30,7 +34,15 @@ commands=
     black --check .
 [testenv:py{38,39,310}-ansible]
 passenv=pdns_version
-deps =
+deps=
     {[ansible-base]deps}
-commands =
+setenv=
+    {[ansible-base]setenv}
+commands=
     {[ansible-base]commands}
+[testenv:publish-action]
+passenv=ANSIBLE_GALAXY_TOKEN TAG
+deps=
+    {[ansible-base]deps}
+commands=
+    ansible-playbook -i localhost, workflow-support/publish.yml
