--- a/.github/actions/make-pdns-image/action.yml
+++ b/.github/actions/make-pdns-image/action.yml
@@ -13,15 +13,24 @@ inputs:
 runs:
   using: "composite"
   steps:
+  - name: check cache for previous image builds
+    id: imagefiles
+    uses: actions/cache@v2
+    with:
+      path: tox.ini
+      key: ${{ inputs.pdns_version }}-${{ hashfiles('tox.ini', 'workflow-support/make_*_image.sh', '.github/actions/make-*-image/action.yml') }}
   - name: build pdns image
-    run: tests/make_pdns_container.sh ${{ inputs.pdns_version }}
+    if: (steps.imagefiles.outputs.cache-hit != 'true') || (github.event_name == 'schedule')
+    run: workflow-support/make_pdns_image.sh ${{ inputs.pdns_version }}
     shell: bash
     env:
       base_image: ${{ inputs.base_image }}
       image_name: ${{ inputs.image_name }}
   - name: login to quay.io
+    if: (steps.imagefiles.outputs.cache-hit != 'true') || (github.event_name == 'schedule')
     run: buildah login -u="${{ inputs.quay_username }}" -p="${{ inputs.quay_password }}" quay.io
     shell: bash
   - name: publish image to quay.io
+    if: (steps.imagefiles.outputs.cache-hit != 'true') || (github.event_name == 'schedule')
     run: buildah push ${{ inputs.image_name }}
     shell: bash
