--- a/workflow-support/test-zone-api-http.yml
+++ b/workflow-support/test-zone-api-http.yml
@@ -7,7 +7,7 @@
       api_key: foo
   tasks:
     - name: check for non-existent zone
-      pdns_auth_zone:
+      kpfleming.powerdns_auth.zone:
         <<: *common
         name: "d1.example."
         state: "exists"
@@ -23,7 +23,7 @@
       failed_when: result.zone.exists != false
 
     - name: check notify for non-existent zone
-      pdns_auth_zone:
+      kpfleming.powerdns_auth.zone:
         <<: *common
         name: "d1.example."
         state: "notify"
@@ -40,7 +40,7 @@
       failed_when: result.failed != true
 
     - name: check for failure during zone creation without properties
-      pdns_auth_zone:
+      kpfleming.powerdns_auth.zone:
         <<: *common
         name: "d2.example."
         state: "present"
@@ -57,7 +57,7 @@
       failed_when: result.failed != true
 
     - name: check for failure during zone creation without soa
-      pdns_auth_zone:
+      kpfleming.powerdns_auth.zone:
         <<: *common
         name: "d2.example."
         state: "present"
@@ -76,7 +76,7 @@
       failed_when: result.failed != true
 
     - name: check "Native" zone creation
-      pdns_auth_zone:
+      kpfleming.powerdns_auth.zone:
         <<: *common
         name: "d2.example."
         state: "present"
@@ -110,7 +110,7 @@
         - result.zone.metadata.axfr_source != "127.0.0.1"
 
     - name: check that zone properties and metadata did not change
-      pdns_auth_zone:
+      kpfleming.powerdns_auth.zone:
         <<: *common
         name: "d2.example."
         state: "present"
@@ -141,7 +141,7 @@
         - result.zone.metadata.axfr_source != "127.0.0.1"
 
     - name: check zone kind change from "Native" to "Master"
-      pdns_auth_zone:
+      kpfleming.powerdns_auth.zone:
         <<: *common
         name: "d2.example."
         state: "present"
@@ -161,7 +161,7 @@
         - result.zone.kind != "Master"
 
     - name: check zone metadata change
-      pdns_auth_zone:
+      kpfleming.powerdns_auth.zone:
         <<: *common
         name: "d2.example."
         state: "present"
@@ -193,7 +193,7 @@
         - result.zone.tsig_allow_axfr[0] != "axfr-key"
 
     - name: check notify for zone
-      pdns_auth_zone:
+      kpfleming.powerdns_auth.zone:
         <<: *common
         name: "d2.example."
         state: "notify"
@@ -210,7 +210,7 @@
         - result.changed != true
 
     - name: check zone removal
-      pdns_auth_zone:
+      kpfleming.powerdns_auth.zone:
         <<: *common
         name: "d2.example."
         state: "absent"
@@ -227,7 +227,7 @@
         - result.changed != true
 
     - name: check "Slave" zone creation
-      pdns_auth_zone:
+      kpfleming.powerdns_auth.zone:
         <<: *common
         name: "d3.example."
         state: "present"
@@ -257,13 +257,13 @@
         - result.zone.axfr_master_tsig[0] != "axfr-key"
 
     - name: check slave zone retrieval
-      pdns_auth_zone:
+      kpfleming.powerdns_auth.zone:
         <<: *common
         name: "d3.example."
         state: "retrieve"
 
     - name: check "Slave" master change
-      pdns_auth_zone:
+      kpfleming.powerdns_auth.zone:
         <<: *common
         name: "d3.example."
         state: "present"
@@ -287,7 +287,7 @@
         - result.zone.masters[1] != "::1"
 
     - name: check zone removal
-      pdns_auth_zone:
+      kpfleming.powerdns_auth.zone:
         <<: *common
         name: "d3.example."
         state: "absent"
