--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,9 @@
 name: Publish to Ansible Galaxy
 
 on:
-  release:
-    types:
-      - created
+  push:
+    tags:
+      - '*'
 
 jobs:
   publish:
@@ -14,5 +14,5 @@ jobs:
     - uses: actions/checkout@v2
     - uses: ./.github/actions/publish
       with:
-        ANSIBLE_GALAXY_TOKEN: ${{ secrets.ANSIBLE_GALAXY_TOKEN }}
-        TAG: ${{ env.GITHUB_REF_NAME }}
+        galaxy_token: ${{ secrets.ANSIBLE_GALAXY_TOKEN }}
+        tag: ${{ env.GITHUB_REF_NAME }}
