allow time-based CI to run

--- a/.github/actions/ci-preflight/action.yml
+++ b/.github/actions/ci-preflight/action.yml
@@ -15,6 +15,7 @@ runs:
         - 'tox.ini'
         - 'workflow-support/make_*_image.sh'
         - '.github/actions/make-*-image/action.yml'
+    if: github.event_name != 'schedule'
   - id: main
     run: echo "::set-output name=image_tag::main"
     shell: bash
