Switch to 23andMe fork of Lintly

--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ passenv=GITHUB_* LINTLY_API_KEY
 deps=
     black
     flake8
-    lintly
+    lintly23
 commands=
     bash -c 'flake8 --ignore=E501,E402,E231 | lintly --format=flake8 --no-request-changes'
     bash -c 'black --check . 2>&1 >/dev/null | lintly --format=black --no-request-changes'
