Pin markupsafe to 2.0.1 so that Lintly (which depends on Jinja2) can work

--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,7 @@ deps=
     black
     flake8
     lintly23
+    markupsafe==2.0.1
 commands=
     bash -c 'flake8 --ignore=E501,E402,E231 | lintly --format=flake8 --no-request-changes'
     bash -c 'black --check . 2>&1 >/dev/null | lintly --format=black --no-request-changes'
