--- a/.github/actions/ci-preflight/action.yml
+++ b/.github/actions/ci-preflight/action.yml
@@ -1,7 +1,7 @@
 name: "Preflight checks for CI"
 outputs:
   need_image:
-    value: ${{ steps.skip_check.outputs.image_files || (github.event_name == 'schedule') }}
+    value: ${{ (steps.skip_check.outputs.image_files == 'true') || (github.event_name == 'schedule') }}
   image_tag:
     value: ${{ steps.main.outputs.image_tag }}${{ steps.pr.outputs.image_tag }}
 runs:
@@ -19,8 +19,8 @@ runs:
   - id: main
     run: echo "::set-output name=image_tag::main"
     shell: bash
-    if: (github.event_name != 'pull_request') || !steps.skip_check.outputs.image_files
+    if: (github.event_name != 'pull_request') || (steps.skip_check.outputs.image_files != 'true')
   - id: pr
     run: echo "::set-output name=image_tag::pr${{ github.event.pull_request.number }}"
     shell: bash
-    if: (github.event_name == 'pull_request') && steps.skip_check.outputs.image_files
+    if: (github.event_name == 'pull_request') && (steps.skip_check.outputs.image_files == 'true')
