Add 'shellcheck' to linting processes

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,6 +8,7 @@ on:
     - 'tox.ini'
     - 'pdns_auth_tsigkey.py'
     - 'pdns_auth_zone.py'
+    - 'workflow-support/*.sh'
     - '.github/workflows/lint.yml'
     - '.github/actions/lint/action.yml'
 
