--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ commands=
     ansible-playbook -i localhost, workflow-support/test-zone-pdns-{env:pdns_version}.yml
 [testenv:lint-action]
 ignore_errors=true
-whitelist_externals=bash
+allowlist_externals=bash
 passenv=GITHUB_* LINTLY_API_KEY
 deps=
     black
@@ -26,13 +26,16 @@ deps=
 commands=
     bash -c 'flake8 --ignore=E501,E402,E231 | lintly --format=flake8 --no-request-changes'
     bash -c 'black --check . 2>&1 >/dev/null | lintly --format=black --no-request-changes'
+    bash -c 'shellcheck workflow-support/*.sh'
 [testenv:lint]
+allowlist_externals=bash
 deps=
     black
     flake8
 commands=
     flake8 --ignore=E501,E402,E231
     black --check .
+    bash -c 'shellcheck workflow-support/*.sh'
 [testenv:py{38,39,310}-ansible]
 passenv=pdns_version
 deps=
