--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ deps=
 setenv=
     ANSIBLE_COLLECTIONS_PATH={envtmpdir}/collections
 commands=
+    python -VV
     ansible-playbook -i localhost, workflow-support/make-galaxy-yml.yml
     ansible-galaxy collection install -p {env:ANSIBLE_COLLECTIONS_PATH} src
     ansible-playbook -i localhost, workflow-support/test-tsigkey-pdns-{env:pdns_version}.yml
@@ -36,7 +37,7 @@ commands=
     flake8 --ignore=E501,E402,E231
     black --check .
     bash -c 'shellcheck workflow-support/*.sh'
-[testenv:py{38,39,310}-ansible]
+[testenv:py{38,39,310,311}-ansible]
 passenv=pdns_version
 deps=
     {[ansible-base]deps}
