--- a/workflow-support/test-tsigkey-api-http.yml
+++ b/workflow-support/test-tsigkey-api-http.yml
@@ -1,11 +1,18 @@
+%YAML 1.2
+---
 - hosts: localhost
   connection: local
   gather_facts: no
+
   vars:
     ansible_python_interpreter: python
     common_args: &common
       api_key: foo
+
   tasks:
+    - debug:
+        var: ansible_python_interpreter
+
     - name: check for non-existent key
       kpfleming.powerdns_auth.tsigkey:
         <<: *common
