--- a/workflow-support/test-zone-api-local.yml
+++ b/workflow-support/test-zone-api-local.yml
@@ -1,12 +1,19 @@
+%YAML 1.2
+---
 - hosts: localhost
   connection: local
   gather_facts: no
+
   vars:
     ansible_python_interpreter: python
     common_args: &common
       api_key: foo
       api_spec_file: ../api-swagger.json
+
   tasks:
+    - debug:
+        var: ansible_python_interpreter
+
     - name: check for non-existent zone
       kpfleming.powerdns_auth.zone:
         <<: *common
