Improve use of caching for image build optimization

--- a/.github/actions/make-pdns-image/action.yml
+++ b/.github/actions/make-pdns-image/action.yml
@@ -15,10 +15,10 @@ runs:
   steps:
   - name: check cache for previous image builds
     id: imagefiles
-    uses: actions/cache@v2
+    uses: actions/cache@v3
     with:
       path: tox.ini
-      key: ${{ inputs.pdns_version }}-${{ hashfiles('tox.ini', 'workflow-support/make_*_image.sh', '.github/actions/make-*-image/action.yml') }}
+      key: ${{ inputs.image_name }}-${{ inputs.pdns_version }}-${{ hashfiles('tox.ini', 'workflow-support/make_*_image.sh', '.github/actions/make-*-image/action.yml') }}
   - name: build pdns image
     if: (steps.imagefiles.outputs.cache-hit != 'true') || (github.event_name == 'schedule')
     run: workflow-support/make_pdns_image.sh ${{ inputs.pdns_version }}
