--- a/.github/actions/make-tox-image/action.yml
+++ b/.github/actions/make-tox-image/action.yml
@@ -11,10 +11,10 @@ runs:
   steps:
   - name: check cache for previous image builds
     id: imagefiles
-    uses: actions/cache@v2
+    uses: actions/cache@v3
     with:
       path: tox.ini
-      key: ${{ hashfiles('tox.ini', 'workflow-support/make_tox_image.sh', '.github/actions/make-tox-image/action.yml') }}
+      key: ${{ inputs.image_name }}-${{ hashfiles('tox.ini', 'workflow-support/make_tox_image.sh', '.github/actions/make-tox-image/action.yml') }}
   - name: build image
     if: (steps.imagefiles.outputs.cache-hit != 'true') || (github.event_name == 'schedule')
     run: workflow-support/make_tox_image.sh
