Use simpler cache keys

--- a/.github/actions/make-pdns-image/action.yml
+++ b/.github/actions/make-pdns-image/action.yml
@@ -18,7 +18,7 @@ runs:
     uses: actions/cache@v3
     with:
       path: tox.ini
-      key: ${{ inputs.image_name }}-${{ inputs.pdns_version }}-${{ hashfiles('tox.ini', 'workflow-support/make_*_image.sh', '.github/actions/make-*-image/action.yml') }}
+      key: ${{ github.ref_name }}-${{ inputs.pdns_version }}-${{ hashfiles('tox.ini', 'workflow-support/make_*_image.sh', '.github/actions/make-*-image/action.yml') }}
   - name: build pdns image
     if: (steps.imagefiles.outputs.cache-hit != 'true') || (github.event_name == 'schedule')
     run: workflow-support/make_pdns_image.sh ${{ inputs.pdns_version }}
