--- a/.github/actions/make-tox-image/action.yml
+++ b/.github/actions/make-tox-image/action.yml
@@ -14,7 +14,7 @@ runs:
     uses: actions/cache@v3
     with:
       path: tox.ini
-      key: ${{ inputs.image_name }}-${{ hashfiles('tox.ini', 'workflow-support/make_tox_image.sh', '.github/actions/make-tox-image/action.yml') }}
+      key: ${{ github.ref_name }}-${{ hashfiles('tox.ini', 'workflow-support/make_tox_image.sh', '.github/actions/make-tox-image/action.yml') }}
   - name: build image
     if: (steps.imagefiles.outputs.cache-hit != 'true') || (github.event_name == 'schedule')
     run: workflow-support/make_tox_image.sh
