--- a/.github/actions/ci-preflight/action.yml
+++ b/.github/actions/ci-preflight/action.yml
@@ -13,8 +13,8 @@ runs:
       filters: |
         image_files:
         - 'tox.ini'
-        - 'workflow-support/make_*_image.sh'
-        - '.github/actions/make-*-image/action.yml'
+        - 'workflow-support/make_ci_image.sh'
+        - '.github/actions/make-ci-image/action.yml'
     if: github.event_name != 'schedule'
   - id: main
     run: echo "::set-output name=image_tag::main"
