--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
     - 'api-swagger.json'
     - 'tox.ini'
     - 'workflow-support/test-*.yml'
-    - 'workflow-support/make_*_image.sh'
+    - 'workflow-support/make_ci_image.sh'
     - 'workflow-support/start_server.sh'
     - '.github/workflows/ci.yml'
     - '.github/actions/*/action.yml'
@@ -25,7 +25,7 @@ on:
     - 'api-swagger.json'
     - 'tox.ini'
     - 'workflow-support/test-*.yml'
-    - 'workflow-support/make_*_image.sh'
+    - 'workflow-support/make_ci_image.sh'
     - 'workflow-support/start_server.sh'
     - '.github/workflows/ci.yml'
     - '.github/actions/*/action.yml'
@@ -33,7 +33,7 @@ on:
     - cron: "35 4 * * 6"
 
 env:
-  registry_base: 'quay.io/apaa-test-images'
+  image_base: 'quay.io/km6g-ci-images/ansible-powerdns-auth'
 
 jobs:
   preflight:
@@ -41,54 +41,40 @@ jobs:
     outputs:
       need_image: ${{ steps.preflight.outputs.need_image }}
       image_tag: ${{ steps.preflight.outputs.image_tag }}
-      # workaround to make registry_base available in jobs
-      registry_base: ${{ env.registry_base }}
+      # workaround to make image_base available in jobs
+      image_base: ${{ env.image_base }}
     steps:
     - uses: actions/checkout@v3
     - id: preflight
       uses: ./.github/actions/ci-preflight
-  image-tox:
+  ci-image:
     runs-on: ubuntu-20.04
     needs:
     - preflight
-    steps:
-    - uses: actions/checkout@v3
-    - uses: ./.github/actions/make-tox-image
-      if: needs.preflight.outputs.need_image == 'true'
-      with:
-        image_name: ${{ needs.preflight.outputs.registry_base }}/tox:${{ needs.preflight.outputs.image_tag }}
-        quay_username: ${{ secrets.QUAY_BOT_NAME }}
-        quay_password: ${{ secrets.QUAY_BOT_PASSWORD }}
-  image-pdns:
-    runs-on: ubuntu-20.04
-    needs:
-    - preflight
-    - image-tox
     strategy:
       matrix:
         pdns: [4.4, 4.5, 4.6, master]
     steps:
     - uses: actions/checkout@v3
-    - uses: ./.github/actions/make-pdns-image
+    - uses: ./.github/actions/make-ci-image
       if: needs.preflight.outputs.need_image == 'true'
       with:
         pdns_version: ${{ matrix.pdns }}
-        base_image: ${{ needs.preflight.outputs.registry_base }}/tox:${{ needs.preflight.outputs.image_tag }}
-        image_name: ${{ needs.preflight.outputs.registry_base }}/pdns-${{ matrix.pdns }}:${{ needs.preflight.outputs.image_tag }}
+        image_name: ${{ needs.preflight.outputs.image_base }}:pdns-${{ matrix.pdns }}-${{ needs.preflight.outputs.image_tag }}
         quay_username: ${{ secrets.QUAY_BOT_NAME }}
         quay_password: ${{ secrets.QUAY_BOT_PASSWORD }}
   test:
     runs-on: ubuntu-20.04
     needs:
     - preflight
-    - image-pdns
+    - ci-image
     strategy:
       matrix:
         pdns: [4.4, 4.5, 4.6, master]
         python: [py38, py39, py310, py311]
       fail-fast: false
     container:
-      image: docker://${{ needs.preflight.outputs.registry_base }}/pdns-${{ matrix.pdns }}:${{ needs.preflight.outputs.image_tag }}
+      image: ${{ needs.preflight.outputs.image_base }}:pdns-${{ matrix.pdns }}-${{ needs.preflight.outputs.image_tag }}
     steps:
     - uses: actions/checkout@v3
     - name: start pdns_server
