--- a/.github/workflows/clean-image-pr.yml
+++ b/.github/workflows/clean-image-pr.yml
@@ -8,16 +8,11 @@ on:
     - main
 
 jobs:
-  clean-tox:
-    runs-on: ubuntu-20.04
-    steps:
-    - name: delete image tag
-      run: 'curl -s -X DELETE -H "Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}" https://quay.io/api/v1/repository/apaa-test-images/tox/tag/pr${{ github.event.pull_request.number }}'
-  clean-pdns:
+  clean-image:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
         pdns: [4.4, 4.5, 4.6, master]
     steps:
     - name: delete image tag
-      run: 'curl -s -X DELETE -H "Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}" https://quay.io/api/v1/repository/apaa-test-images/pdns-${{ matrix.pdns }}/tag/pr${{ github.event.pull_request.number }}'
+      run: 'curl -s -X DELETE -H "Authorization: Bearer ${{ secrets.QUAY_API_TOKEN }}" https://quay.io/api/v1/repository/km6g-ci-images/ansible-powerdns-auth/tag/pdns-${{ matrix.pdns }}-pr${{ github.event.pull_request.number }}'
